Change structure html

--- a/index.html
+++ b/index.html
@@ -1,93 +1,90 @@
 <!DOCTYPE html>
 <html lang="cs">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dan Šimanský – Portfolio</title>
 </head>
+ 
 <body>
     <header>
-        <h1>Daniel Šimanský</h1>
-        <div class="nav-bar">
-            <nav>
-                <ul>
-                    <li><a href="#about-me">O mě</a></li>
-                    <li><a href="#technologies">Technologie</a></li>
-                    <li><a href="#projects">Projekty</a></li>
-                    <li><a href="#contact">Kontakt</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="#technologies">Technologies</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#other-skills">Other skills</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
+        <h1>Frontend developer<br>Daniel Šimanský</h1>
+        <p>I’m Jan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
+            much details but also a bit of my personality shows here.</p>
     </header>
+
     <main>
-        <section>
-            <div class="about-me">
-                <div class="heading-main">
-                    <h2>O mě</h2>
-                </div>
-                <div class="about-me-main">
-                    <p class="section-text">Mé jméno je Daniel Šimanský a jsem začínajícím vývojářem se zaměřením na Front-end. Mám základní zkušenosti s tvorbou struktury webových stránek. Znalost CSS mi umožňuje vytvářet moderní a responzivní design. Pracuji s přizpůsobivým designem. Začínám se základy JavaScriptu a chci získat zkušenosti s verzováním kódu pomocí Gitu a GitHubu, což mi umožní spolupracovat s ostatními a udržovat své projekty aktuální.</p>
-                </div>
-                <div class="profil-img">
-                    <img src="images/profil.obrazek.jpg" alt="profilova-fotka">
-                </div>
-            </div>
+        <section id="technologies">
+            <h2><small>What can i work with</small><br>Technologies</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Git &amp; GitHub</li>
+                <li>Gulp &amp; npm scripts</li>
+            </ul>
         </section>
-        <section>
-            <div class="technologies">
-                <div class="heading-main">
-                    <h2>Technologie</h2>
-                </div>
-                <div class="technologies-main">
-                    <p class="section-text">Používám technologie jako HTML, CSS, Sass a začínám s JavaScriptem a pokračovat v Reactu.</p>
-                </div>
-            </div>
+
+        <section id="projects">
+            <h2><small>What did I do</small><br>Projects</h2>
+            <article>
+                <h3>Project Alpha</h3>
+                <img src="https://satyr.dev/320x240" width="320" height="240" alt="">
+                <p>The description of the project, what was done by you, what have you learned. What were the
+                    technologies and methodologies used to create this project. See the <a href="#">website</a> and check
+                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>                
+            </article>
+
+            <article>
+                <h3>Project Beta</h3>
+                <img src="https://satyr.dev/320x240" width="320" height="240" alt="">
+                <p>The description of the project, what was done by you, what have you learned. What were the
+                    technologies and methodologies used to create this project. See the <a href="#">website</a> and check
+                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+            </article>
+
+            <article>
+                <h3>Project Gamma</h3>
+                <img src="https://satyr.dev/320x240" width="320" height="240" alt="">
+                <p>The description of the project, what was done by you, what have you learned. What were the
+                    technologies and methodologies used to create this project. See the <a href="#">website</a> and check
+                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+            </article>
         </section>
-        <section>
-            <div class="projects">
-                <div class="heading-main">
-                    <h2>Projekty</h2>
-                </div>
-                    <div class="project-basic-web">
-                        <div class="project-name">
-                            <h3>Základní stránka</h3>
-                        </div>
-                        <p class="section-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quis deleniti, incidunt pariatur exercitationem culpa cumque distinctio commodi quasi nobis maxime itaque, sunt accusantium? Iusto amet aut veniam eum itaque!</p>                        
-                    </div>
-                    <div class="project-multipage-web">
-                        <div class="project-name">
-                            <h3>Složitější stránky</h3>
-                        </div>
-                        <p class="section-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quis deleniti, incidunt pariatur exercitationem culpa cumque distinctio commodi quasi nobis maxime itaque, sunt accusantium? Iusto amet aut veniam eum itaque!</p>                        
-                    </div>
-                    <div class="project-git">
-                        <div class="project-name">
-                            <h3>Projekt v Gitu</h3>
-                        </div>
-                        <p class="section-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam quis deleniti, incidunt pariatur exercitationem culpa cumque distinctio commodi quasi nobis maxime itaque, sunt accusantium? Iusto amet aut veniam eum itaque!</p>                        
-                    </div>
-            </div>
+
+        <section id="other-skills">
+            <h2><small>More about me</small><br>Other skills</h2>
+            <ul>
+                <li>English B1</li>
+                <li>Drivers license</li>
+            </ul>
         </section>
-        <section>
-            <div class="contact">
-                <div class="heading-main">
-                    <h2>Kontakt</h2>
-                </div>
-                <div class="contact-main">
-                    <div class="contact-linkedin">
-                        <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a>                        
-                    </div>
-                    <div class="contact-github">
-                        <a href="https://github.com/Adiosik">GitHub</a>
-                    </div>
-                </div>
-            </div>
+
+        <section id="contacts">
+            <h2><small>Let’s talk</small><br>Contacts</h2>
+            <img src="https://satyr.dev/192" width="190" height="190" alt="">
+            <p>mail me at <a href="mailto:simansky.dan@gmail.com">simansky.dan@gmail.com</a> give me a call at <a
+                    href="tel:+420723246778">723 246 778</a><br>
+                <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a><br>
+                <a href="https://github.com/Adiosik">GitHub</a>
+            </p>
         </section>
     </main>
+
     <footer>
         <div class="footer-copy">
-            <p>&copy; 2023 Daniel Šimanský</p>
+            <p>© 2023 Daniel Šimanský</p>
         </div>
     </footer>
 </body>
+
 </html>
