Change CSS text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dan Šimanský – Portfolio</title>
 </head>
  
@@ -17,9 +18,9 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
-        <h1>Frontend developer<br>Daniel Šimanský</h1>
-        <p>I’m Jan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
-            much details but also a bit of my personality shows here.</p>
+        <h1><small>Frontend developer</small><br>Daniel Šimanský</h1>
+        <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
+        much details but also a bit of my personality shows here.</p>
     </header>
 
     <main>
@@ -66,6 +67,7 @@
             <ul>
                 <li>English B1</li>
                 <li>Drivers license</li>
+                <li>Divers license</li>
             </ul>
         </section>
 
@@ -81,9 +83,7 @@
     </main>
 
     <footer>
-        <div class="footer-copy">
-            <p>© 2023 Daniel Šimanský</p>
-        </div>
+        <p>© 2023 Daniel Šimanský</p>
     </footer>
 </body>
 
