Change small element and move outside of h1,h2,h3

--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
-        <h1><small>Frontend developer</small><br>Daniel Šimanský</h1>
+        <small>Frontend developer</small>
+        <h1>Daniel Šimanský</h1>
         <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
         much details but also a bit of my personality shows here.</p>
     </header>
 
     <main>
         <section id="technologies">
-            <h2><small>What can i work with</small><br>Technologies</h2>
+            <small>What can i work with</small>
+            <h2>Technologies</h2>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -36,7 +38,8 @@
         </section>
 
         <section id="projects">
-            <h2><small>What did I do</small><br>Projects</h2>
+            <small>What did I do</small>
+            <h2>Projects</h2>
             <article>
                 <h3>Project Alpha</h3>
                 <img src="https://satyr.dev/320x240" width="320" height="240" alt="">
@@ -63,7 +66,8 @@
         </section>
 
         <section id="other-skills">
-            <h2><small>More about me</small><br>Other skills</h2>
+            <small>More about me</small>
+            <h2>Other skills</h2>
             <ul>
                 <li>English B1</li>
                 <li>Drivers license</li>
@@ -72,7 +76,8 @@
         </section>
 
         <section id="contacts">
-            <h2><small>Let’s talk</small><br>Contacts</h2>
+            <small>Let’s talk</small>
+            <h2>Contacts</h2>
             <img src="https://satyr.dev/192" width="190" height="190" alt="">
             <p>mail me at <a href="mailto:simansky.dan@gmail.com">simansky.dan@gmail.com</a> give me a call at <a
                     href="tel:+420723246778">723 246 778</a><br>
