--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Dan Šimanský – Portfolio</title>
 </head>
- 
+
 <body>
     <header>
         <nav>
@@ -18,16 +18,14 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
-        <small>Frontend developer</small>
-        <h1>Daniel Šimanský</h1>
+        <h1><small>Frontend developer</small> Daniel Šimanský</h1>
         <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
-        much details but also a bit of my personality shows here.</p>
+            much details but also a bit of my personality shows here.</p>
     </header>
 
     <main>
-        <section id="technologies">
-            <small>What can i work with</small>
-            <h2>Technologies</h2>
+        <section class="technologies" id="technologies">
+            <h2><small>What can i work with</small> Technologies</h2>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -37,37 +35,41 @@
             </ul>
         </section>
 
-        <section id="projects">
-            <small>What did I do</small>
-            <h2>Projects</h2>
+        <section class="projects" id="projects">
+            <h2><small>What did I do</small> Projects</h2>
+
             <article>
                 <h3>Project Alpha</h3>
-                <img src="https://satyr.dev/320x240" width="320" height="240" alt="">
+                <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
                 <p>The description of the project, what was done by you, what have you learned. What were the
-                    technologies and methodologies used to create this project. See the <a href="#">website</a> and check
-                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>                
+                    technologies and methodologies used to create this project.</p>
+                <p>See the <a href="#">website</a> and check
+                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
 
             <article>
                 <h3>Project Beta</h3>
-                <img src="https://satyr.dev/320x240" width="320" height="240" alt="">
+                <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
                 <p>The description of the project, what was done by you, what have you learned. What were the
-                    technologies and methodologies used to create this project. See the <a href="#">website</a> and check
+                    technologies and methodologies used to create this project.</p>
+                <p>See the <a href="#">website</a> and
+                    check
                     the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
 
             <article>
                 <h3>Project Gamma</h3>
-                <img src="https://satyr.dev/320x240" width="320" height="240" alt="">
+                <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
                 <p>The description of the project, what was done by you, what have you learned. What were the
-                    technologies and methodologies used to create this project. See the <a href="#">website</a> and check
+                    technologies and methodologies used to create this project.</p>
+                <p>See the <a href="#">website</a> and
+                    check
                     the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
         </section>
 
-        <section id="other-skills">
-            <small>More about me</small>
-            <h2>Other skills</h2>
+        <section class="other-skills" id="other-skills">
+            <h2><small>More about me</small> Other skills</h2>
             <ul>
                 <li>English B1</li>
                 <li>Drivers license</li>
@@ -75,11 +77,10 @@
             </ul>
         </section>
 
-        <section id="contacts">
-            <small>Let’s talk</small>
-            <h2>Contacts</h2>
-            <img src="https://satyr.dev/192" width="190" height="190" alt="">
-            <p>mail me at <a href="mailto:simansky.dan@gmail.com">simansky.dan@gmail.com</a> give me a call at <a
+        <section class="contacts" id="contacts">
+            <h2><small>Let’s talk</small> Contacts</h2>
+            <img src="https://satyr.dev/384" width="192" height="192" alt="">
+            <p>mail me at <a href="mailto:simansky.dan@gmail.com">simansky.dan@gmail.com</a><br>give me a call at <a
                     href="tel:+420723246778">723 246 778</a><br>
                 <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a><br>
                 <a href="https://github.com/Adiosik">GitHub</a>
