--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+
         <section class="technologies" id="technologies">
             <h2><small>What can i work with</small> Technologies</h2>
             <ul>
@@ -41,30 +42,22 @@
             <article>
                 <h3>Project Alpha</h3>
                 <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
-                <p>The description of the project, what was done by you, what have you learned. What were the
-                    technologies and methodologies used to create this project.</p>
-                <p>See the <a href="#">website</a> and check
-                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
+                <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
 
             <article>
                 <h3>Project Beta</h3>
                 <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
-                <p>The description of the project, what was done by you, what have you learned. What were the
-                    technologies and methodologies used to create this project.</p>
-                <p>See the <a href="#">website</a> and
-                    check
-                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
+                <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
 
             <article>
                 <h3>Project Gamma</h3>
                 <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
-                <p>The description of the project, what was done by you, what have you learned. What were the
-                    technologies and methodologies used to create this project.</p>
-                <p>See the <a href="#">website</a> and
-                    check
-                    the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
+                <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
         </section>
 
@@ -81,7 +74,8 @@
             <h2><small>Let’s talk</small> Contacts</h2>
             <img src="https://satyr.dev/384" loading="lazy" width="192" height="192" alt="">
             <p>mail me at <a href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me a call at <a
-                    href="tel:+420723246778">723 246 778</a><br>
+                    href="tel:+420723246778">723 246 778</a>
+                <br>
                 <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a><br>
                 <a href="https://github.com/Adiosik">GitHub</a>
             </p>
