Change img size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
 
         <section class="technologies" id="technologies">
-            <h2><small>What can i work with</small> Technologies</h2>
+            <h2><small>What can i work with</small> Technolo&shy;gies</h2>
             <ul>
                 <li>HTML</li>
                 <li>CSS</li>
@@ -40,22 +40,26 @@
             <h2><small>What did I do</small> Projects</h2>
 
             <article>
-                <h3>Project Alpha</h3>
-                <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
-                <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
-                <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                <div>
+                    <h3>Project Alpha</h3>
+                    <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
+                    <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                </div>
+                <div>
+                    <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
+                </div>
             </article>
 
             <article>
                 <h3>Project Beta</h3>
-                <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
+                <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
                 <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
                 <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
 
             <article>
                 <h3>Project Gamma</h3>
-                <img src="https://satyr.dev/640x480" width="320" height="240" alt="">
+                <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
                 <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
                 <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
             </article>
@@ -72,7 +76,7 @@
 
         <section class="contacts" id="contacts">
             <h2><small>Let’s talk</small> Contacts</h2>
-            <img src="https://satyr.dev/384" loading="lazy" width="192" height="192" alt="">
+            <img src="https://satyr.dev/384" loading="lazy" width="384" height="384" alt="">
             <p>mail me at <a href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me a call at <a
                     href="tel:+420723246778">723 246 778</a>
                 <br>
