--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header>
+    <div class="nav">
         <nav>
             <ul>
                 <li><a href="#technologies">Technologies</a></li>
@@ -18,9 +18,11 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+    </div>
+    <header>
         <h1><small>Frontend developer</small> Daniel Šimanský</h1>
-        <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
-            much details but also a bit of my personality shows here.</p>
+            <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
+                much details but also a bit of my personality shows here.</p>
     </header>
 
     <main>
@@ -40,7 +42,7 @@
             <h2><small>What did I do</small> Projects</h2>
 
             <article>
-                <div>
+                <div class="project-alpha">
                     <h3>Project Alpha</h3>
                     <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
                     <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
@@ -51,17 +53,25 @@
             </article>
 
             <article>
-                <h3>Project Beta</h3>
-                <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
-                <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
-                <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                <div class="project-beta">
+                    <h3>Project Beta</h3>
+                    <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
+                    <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                </div>
+                <div>
+                    <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
+                </div>
             </article>
 
             <article>
-                <h3>Project Gamma</h3>
-                <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
-                <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
-                <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                <div class="project-gamma">
+                    <h3>Project Gamma</h3>
+                    <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
+                    <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
+                </div>
+                <div>
+                    <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
+                </div>
             </article>
         </section>
 
@@ -76,7 +86,7 @@
 
         <section class="contacts" id="contacts">
             <h2><small>Let’s talk</small> Contacts</h2>
-            <img src="https://satyr.dev/384" loading="lazy" width="384" height="384" alt="">
+            <img src="https://satyr.dev/384" loading="lazy" width="192" height="192" alt="">
             <p>mail me at <a href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me a call at <a
                     href="tel:+420723246778">723 246 778</a>
                 <br>
