Change Header to desktop version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="nav">
+    <header>
         <nav>
             <ul>
                 <li><a href="#technologies">Technologies</a></li>
@@ -18,11 +18,13 @@
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
-    </div>
-    <header>
-        <h1><small>Frontend developer</small> Daniel Šimanský</h1>
-            <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
+        <div class="container">
+            <h1><small>Frontend developer</small> Daniel Šimanský</h1>
+            <div class="header-text">
+                <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff about me. Not
                 much details but also a bit of my personality shows here.</p>
+            </div>    
+        </div>
     </header>
 
     <main>
