Change projects to desktop version

--- a/index.html
+++ b/index.html
@@ -43,35 +43,35 @@
         <section class="projects" id="projects">
             <h2><small>What did I do</small> Projects</h2>
 
-            <article>
-                <div class="project-alpha">
+            <article class="project">
+                <div class="project-text">
                     <h3>Project Alpha</h3>
                     <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
                     <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
                 </div>
-                <div>
+                <div class="project-img">
                     <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
                 </div>
             </article>
 
-            <article>
-                <div class="project-beta">
+            <article class="project">
+                <div class="project-text">
                     <h3>Project Beta</h3>
                     <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
                     <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
                 </div>
-                <div>
+                <div class="project-img">
                     <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
                 </div>
             </article>
 
-            <article>
-                <div class="project-gamma">
+            <article class="project">
+                <div class="project-text">
                     <h3>Project Gamma</h3>
                     <p>The description of the project, what was done by you, what have you learned. What were the technologies and methodologies used to create this project.</p>
                     <p>See the <a href="#">website</a> and check the <a href="https://github.com/Adiosik">source code on GitHub</a></p>
                 </div>
-                <div>
+                <div class="project-img">
                     <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
                 </div>
             </article>
