Update html contacts

--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
 
         <section class="contacts" id="contacts">
             <h2><small>Let’s talk</small> Contacts</h2>
-            <img src="https://satyr.dev/384" loading="lazy" width="192" height="192" alt="">
-            <p>mail me at <a href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me a call at <a
-                    href="tel:+420723246778">723 246 778</a>
+            <div class="contacts-description">
+                <img src="https://satyr.dev/384" loading="lazy" width="192" height="192" alt="">
+                <p>mail me at <a href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me a call at <a href="tel:+420723246778">723 246 778</a>
                 <br>
-                <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a><br>
+                <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a>
+                <br>
                 <a href="https://github.com/Adiosik">GitHub</a>
-            </p>
+                </p>
+            </div>
         </section>
     </main>
 
