--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </ul>
                 </nav>
                 <div class="container container-nav">
-                    <h1><small>Frontend developer</small> Daniel Šimanský</h1>
+                    <h1><small>Frontend developer</small> Daniel Šiman&shy;ský</h1>
                     <div class="header-text">
                         <p>I’m Dan a front end developer based in Czechia. These are the words that tell you basic stuff
                             about me. Not
@@ -34,7 +34,7 @@
         <div class="container">
             <main>
                 <section class="technologies" id="technologies">
-                    <h2><small>What can i work with</small> Technolo&shy;gies</h2>
+                    <h2><small>What can I&nbsp;work with</small> Technolo&shy;gies</h2>
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
@@ -102,7 +102,7 @@
                         <img src="https://satyr.dev/384" loading="lazy" width="192" height="192" alt="">
                         <p>mail me at <a
                                 href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me
-                            a call at <a href="tel:+420723246778">723 246 778</a>
+                            a call at <a href="tel:+420723246778"><span>723 246 778</span></a>
                             <br>
                             <a href="https://www.linkedin.com/in/daniel-%C5%A1imansk%C3%BD-44579b261/">LinkedIn</a>
                             <br>
