Change images to responsive scale

--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
                                     code on GitHub</a></p>
                         </div>
                         <div class="project-img">
-                            <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
+                            <img src="https://satyr.dev/1296x972/1" 
+                            srcset="
+                            https://satyr.dev/280x4:3/1 280w,
+                            https://satyr.dev/576x4:3/2 576w,
+                            https://satyr.dev/648x4:3/3 648w,
+                            https://satyr.dev/1152x4:3/4 1152w,
+                            https://satyr.dev/1296x4:3/5 1296w" 
+                            " sizes="
+                                (min-width: 960px) 648px,
+                                (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) , 
+                                (min-width: 640px) 576px,
+                                calc(100vw - 2 * 2rem)"
+                            width="1296" height="972" alt="">
                         </div>
                     </article>
 
@@ -69,7 +81,19 @@
                                     code on GitHub</a></p>
                         </div>
                         <div class="project-img">
-                            <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
+                            <img src="https://satyr.dev/1296x972/1" 
+                            srcset="
+                            https://satyr.dev/280x4:3/1 280w,
+                            https://satyr.dev/576x4:3/2 576w,
+                            https://satyr.dev/648x4:3/3 648w,
+                            https://satyr.dev/1152x4:3/4 1152w,
+                            https://satyr.dev/1296x4:3/5 1296w" 
+                            " sizes="
+                                (min-width: 960px) 648px,
+                                (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609) , 
+                                (min-width: 640px) 576px,
+                                calc(100vw - 2 * 2rem)"
+                            width="1296" height="972" alt="">
                         </div>
                     </article>
 
@@ -82,7 +106,19 @@
                                     code on GitHub</a></p>
                         </div>
                         <div class="project-img">
-                            <img src="https://satyr.dev/640x480" width="640" height="480" alt="">
+                            <img src="https://satyr.dev/1296x972/1" 
+                            srcset="
+                                https://satyr.dev/280x4:3/1 280w,
+                                https://satyr.dev/576x4:3/2 576w,
+                                https://satyr.dev/648x4:3/3 648w,
+                                https://satyr.dev/1152x4:3/4 1152w,
+                                https://satyr.dev/1296x4:3/5 1296w" 
+                            sizes="
+                                (min-width: 960px) 648px, 
+                                (min-width: 960px) calc((100vw - 2 * 2rem - 3rem) * 0.609), 
+                                (min-width: 640px) 576px, 
+                                calc(100vw - 2 * 2rem)"
+                            width="1296" height="972" alt="">
                         </div>
                     </article>
                 </section>
@@ -99,7 +135,11 @@
                 <section class="contacts" id="contacts">
                     <h2><small>Let’s talk</small> Contacts</h2>
                     <div class="contacts-description">
-                        <img src="https://satyr.dev/384" loading="lazy" width="192" height="192" alt="">
+                        <img src="https://satyr.dev/384" 
+                        srcset="
+                        https://satyr.dev/192/10 192w,
+                        https://satyr.dev/384/11 384w
+                        " sizes="192px" loading="lazy" width="192" height="192" alt="">
                         <p>mail me at <a
                                 href="mailto:simansky.dan@gmail.com"><span>simansky.dan</span>@gmail.com</a><br>give me
                             a call at <a href="tel:+420723246778"><span>723 246 778</span></a>
